cabal-version: >= 1.10
name:          transferwise
version:       0.0.0
build-type:    Simple

library
  default-language: Haskell2010
  build-depends:    base, servant, servant-client, text, bytestring, aeson, scientific, time
  ghc-options:      -Wall -Wno-name-shadowing
  hs-source-dirs:   lib
  exposed-modules:  Network.Transferwise.API
                    Network.Transferwise.Types
